@@ -1,3 +1,13 @@
+[B]1.2.1[/B]
+- Minor tweaks in main indexer
+
+[B]1.2.0[/B]
+- Added developer's picks radio stations (outside of eradio's scope)
+- Added link for source code.
+
+[B]1.1.2[/B]
+- Cosmetics
+
 [B]1.1.1[/B]
 - Rebased to used tulip libraries
 
